--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Een plant uitkiezen</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Er zijn veel verschillende planten. Hoe weet je dat je de goede hebt? Geen probleem, doe de test.</p>
+                                                                <p style="font-size: 16px;" class="pMob">Er zijn veel verschillende planten. Hoe kies je de juiste plant? Geen probleem, doe de test.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -219,7 +219,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Een pot  uitkiezen</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Oke, na de test heb jij de ideale plant gevonden. Nu op zoek naar de mooiste plant. Hulp nodig?</p>
+                                                                <p style="font-size: 16px;" class="pMob">Oke, na de test heb jij de ideale plant gevonden. Nu op zoek naar een mooie pot voor de nieuwe plant. Hulp nodig?</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -280,7 +280,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Choose you soil wisely</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Yes! Bijna klaar. De plant heb je gekozen. Kijk naar de specificaties voor de juiste potgrond.</p>
+                                                                <p style="font-size: 16px;" class="pMob">Yes, bijna klaar! De plant heb je gekozen. Kijk naar de specificaties voor de juiste potgrond.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -341,7 +341,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Now wait</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Sit back and relax! Wij bezorgen binnen vijf werkdagen je bestelling met de handleiding.</p>
+                                                                <p style="font-size: 16px;" class="pMob">Sit back and relax! Wij bezorgen binnen vijf werkdagen je bestelling.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
