--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Een pot  uitkiezen</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Oke, na de test heb jij de ideale plant gevonden. Nu op zoek naar een mooie pot voor de nieuwe plant. Hulp nodig?</p>
+                                                                <p style="font-size: 16px;" class="pMob">Oke, na de test heb jij de ideale plant gevonden. Nu op zoek naar een mooie pot voor je nieuwe plant. Hulp nodig?</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -280,7 +280,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Choose you soil wisely</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Yes, bijna klaar! De plant heb je gekozen. Kijk naar de specificaties voor de juiste potgrond.</p>
+                                                                <p style="font-size: 16px;" class="pMob">Bijna klaar! De plant en de pot heb je gekozen. Kijk naar de specificaties voor de juiste potgrond.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -463,7 +463,7 @@
                                                         <tr>
                                                             <td valign="top">
                                                                 <h3 style="font-size: 20px; font-weight: normal; padding-bottom: 10px" class="h3Mob">Enjoy</h3>
-                                                                <p style="font-size: 16px;" class="pMob">Klaar! Nu genieten van de vele gezondheidsvoordelen en gezelligheid van je nieuwe aankoop.</p>
+                                                                <p style="font-size: 16px;" class="pMob">Klaar! Nu genieten van de vele gezondheidsvoordelen en de gezelligheid van je nieuwe aankoop.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
